--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-6 offset-md-3">
       <form class="card-body cardbody-color p-lg-5" method="post" action="/" >
         <div class="text-center">
-          <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
+          <img src="http://oldkhiva.uz/img/logo.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
             width="200px" alt="profile">
         </div>
         <div class="mb-3">
